# fast-api-docker-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
